# ktrack

./: CMakeLists.txt  README
include/: contour.h  file_io.h  opencv_helpers.h
include/ktrack/: ktrack.hpp
samples/: CMakeLists.txt  demo_active_contour_tracker.cpp  demo_simple_motion_tracker.cpp
src/: contour.cpp  contour_utils.cpp  file_io.cpp  ktrack.cpp  opencv_helpers.cpp  pfcore.cpp
unittest/: CMakeLists.txt  test_active_contour.cpp  test_click_drag_track.cpp  test_opencv_frame2frame.cpp  test_opencv_tracker.cpp  test_webcam_pfcore.cpp
